# pre-commit-alacritty-os-specific-shell

./: .pre-commit-hooks.yaml  README.md  hook.py  pyproject.toml
